hphp/hack/test/typecheck/enum/bad/enum_missing_base_type.php
<?hh

enum X {
  Y = 2;
}
